--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "apollo-client": "^2.0.4",
     "apollo-client-preset": "^1.0.5",
     "babel-plugin-inline-import": "^2.0.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-runtime": "^6.26.0",
     "body-parser": "^1.18.2",
     "bootstrap": "4.0.0-beta.3",
@@ -20,6 +22,8 @@
     "gravatar-url": "^2.0.0",
     "lodash": "^4.17.4",
     "meteor-node-stubs": "^0.3.2",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
