--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-onclickoutside": "^6.7.0",
+    "react-popper": "^0.7.5",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-sortable-hoc": "^0.6.8",
     "redux": "^3.7.2",
-    "stylelint-config-standard": "17.0.0"
+    "stylelint-config-standard": "17.0.0",
+    "things-calendar": "^1.0.6"
   }
 }
