--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-runtime": "^6.26.0",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
-    "bootstrap": "4.0.0-beta.3",
+    "bootstrap": "^4.0.0",
     "express": "^4.16.2",
     "feather-icons": "^4.5.0",
     "graphql": "^0.12.3",
@@ -24,6 +25,7 @@
     "meteor-node-stubs": "^0.3.2",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
+    "query-string": "^5.0.1",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
