--- a/package.json
+++ b/package.json
@@ -5,38 +5,40 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "apollo-client": "^2.0.4",
-    "apollo-client-preset": "^1.0.5",
+    "@babel/runtime": "^7.0.0-beta.40",
+    "apollo-client": "^2.2.5",
+    "apollo-client-preset": "^1.0.8",
     "babel-plugin-inline-import": "^2.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-runtime": "^6.26.0",
+    "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "express": "^4.16.2",
-    "feather-icons": "^4.5.0",
+    "feather-icons": "^4.6.0",
     "graphql": "^0.12.3",
     "graphql-server-express": "^1.3.2",
-    "graphql-tag": "^2.6.1",
-    "graphql-tools": "^2.16.0",
+    "graphql-tag": "^2.8.0",
+    "graphql-tools": "^2.21.0",
     "gravatar-url": "^2.0.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "meteor-node-stubs": "^0.3.2",
-    "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
-    "query-string": "^5.0.1",
+    "mobx": "^3.5.1",
+    "mobx-react": "^4.4.2",
+    "query-string": "^5.1.0",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
-    "react-onclickoutside": "^6.7.0",
+    "react-onclickoutside": "^6.7.1",
     "react-popper": "^0.7.5",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-sortable-hoc": "^0.6.8",
     "redux": "^3.7.2",
-    "stylelint-config-standard": "17.0.0",
+    "stylelint-config-standard": "^17.0.0",
     "things-calendar": "^1.0.6"
   }
 }
